fix print invoice on Egde browser and white space when show message

--- a/app/assets/stylesheets/flash_message.scss
+++ b/app/assets/stylesheets/flash_message.scss
@@ -18,7 +18,6 @@
 
 .alert {
   padding: 5px 15px;
-  margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
 }
