--- a/app/assets/stylesheets/shared.scss
+++ b/app/assets/stylesheets/shared.scss
@@ -902,6 +902,13 @@ footer {
       font-size: 16px;
     }
   }
+
+  @supports (-ms-ime-align:auto) {
+    /* All Edge CSS here */
+    .modal-custom .modal-dialog {
+      position: absolute;
+    }
+  }
 }
 
 
@@ -911,3 +918,5 @@ footer {
     position: absolute;
   }
 }
+
+
